<resources>
    <string name="app_name">Trivia</string>

    <string name="quiz_name">Mastermind</string>
    <string name="counter">0 / 100</string>
    <string name="true_title">true</string>

    <string name="false_title">false</string>

    <string name="previous_button">previous button</string>

    <string name="next_button">next button</string>
    <string name="correct_answer">Correct</string>
    <string name="wrong_answer">Wrong</string>
    <string name="reset_questions">Reset Questions</string>
</resources>
